1.21 port pre-testing